<resources>
    <string name="app_name">Get Flat</string>

    <string name="rent_flat">Аренда квартир</string>
    <string name="rent_room">Аренда комнат</string>
    <string name="sale_flat">Продажа квартир</string>
    <string name="sale_house">Продажа домов</string>

    <string name="action_rent">Аренда</string>
    <string name="action_sale">Продажа</string>








    <string-array name="citylist">
        <item>Киев</item>
    </string-array>

    <string-array name="districtlist">
        <item>Голосеевский</item>
        <item>Дарницкий</item>
        <item>Деснянский</item>
        <item>Днепровский</item>
        <item>Оболонский</item>
        <item>Печерский</item>
        <item>Подольский</item>
        <item>Святошинский</item>
        <item>Соломенский</item>
        <item>Шевченковский</item>
        <item>Академгородок</item>
        <item>Александровская Слободка</item>
        <item>Багриновая гора</item>
        <item>Байковая гора</item>
        <item>Батыева Гора</item>
        <item>Беличи</item>
        <item>Беличье поле</item>
        <item>Березняки</item>
        <item>Берковец</item>
        <item>Бортничи</item>
        <item>Борщаговка</item>
        <item>Быковня</item>
        <item>Верхняя Теличка</item>
        <item>Ветряные Горы</item>
        <item>Виноградарь</item>
        <item>Воскресенка</item>
        <item>Вышгородский массив</item>
        <item>Галаганы</item>
        <item>Голосеево</item>
        <item>Дачи Осокорки</item>
        <item>ДВРЗ</item>
        <item>Демеевка</item>
        <item>Добрый путь</item>
        <item>Железнодорожный</item>
        <item>Жуляны</item>
        <item>Замковище</item>
        <item>Зверинец</item>
        <item>Исторический центр</item>
        <item>Кадетский Гай</item>
        <item>Караваевы дачи</item>
        <item>Катериновка</item>
        <item>Китаево</item>
        <item>Комсомольский</item>
        <item>Конча-Заспа</item>
        <item>Корчеватое</item>
        <item>КПИ</item>
        <item>Кудрявец</item>
        <item>Куреневка</item>
        <item>Левобережный массив</item>
        <item>Лесной</item>
        <item>Липки</item>
        <item>Лукьяновка</item>
        <item>Минский</item>
        <item>Мостицкий массив</item>
        <item>Мышеловка</item>
        <item>Нивки</item>
        <item>Нижние сады</item>
        <item>Нижний Печерск</item>
        <item>Никольская Борщаговка</item>
        <item>Никольская Слободка</item>
        <item>Новая Дарница</item>
        <item>Новобеличи</item>
        <item>Новое строение</item>
        <item>Оболонь</item>
        <item>Осокорки</item>
        <item>Отрадный</item>
        <item>Паньковщина</item>
        <item>Первомайский массив</item>
        <item>Петровка</item>
        <item>Печерск</item>
        <item>Пирогов</item>
        <item>Подол</item>
        <item>Позняки</item>
        <item>Приорка</item>
        <item>Пуща-Водица</item>
        <item>Радужный</item>
        <item>Русановка</item>
        <item>Русановские сады</item>
        <item>Рыбальский остров</item>
        <item>Саперная Слободка</item>
        <item>Святошино</item>
        <item>Село Троещина</item>
        <item>Село Шевченко</item>
        <item>Совки</item>
        <item>Солдатская слободка</item>
        <item>Соломенка</item>
        <item>Соцгород</item>
        <item>Старая Дарница</item>
        <item>Старый Киев</item>
        <item>Сырец</item>
        <item>Татарка</item>
        <item>Теремки</item>
        <item>Теремки-1</item>
        <item>Теремки-2</item>
        <item>Троещина</item>
        <item>Феофания</item>
        <item>Харьковский</item>
        <item>Царское село</item>
        <item>Чапаевка</item>
        <item>Черепанова гора</item>
        <item>Чёрная гора</item>
        <item>Чоколовка</item>
        <item>Ширма</item>
        <item>Шулявка</item>
        <item>Южная Борщаговка</item>
    </string-array>


    <string name="action_settings">Settings</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="missed">Missed</string>
    <string name="action_create">Create</string>
    <string name="create_new_reminder">Reminder</string>
    <string name="create_new_note">Note</string>

    <string name="button_note"> Note </string>
    <string name="button_reminder"> Reminder </string>
    <string name="button_cancel"> Cancel </string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="actual">Actual</string>
    <string name="outdated">Outdated</string>

    <string name="new_note">New note</string>
    <string name="new_note_hint">Note will be saved automatically</string>
    <string name="new_note_done">Done</string>
    <string name="new_note_add_comment">Please add comment</string>

    <string name="note_alarm">Note</string>

    <string name="perm_access_info">You need to grant access to \</string>
    <string name="perm_read_phone_state">make and manage phone calls</string>
    <string name="perm_read_contacts">access your contacts</string>
    <string name="perm_access_contacts">You need to allow access your contacts</string>
    <string name="perm_denied_message"> Some Permission is Denied. Please check application settings </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="context_menu_edit"> Edit </string>
    <string name="context_menu_delete"> Delete </string>


</resources>
