<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_incoming"
            android:title="@string/incoming"
            android:icon="@drawable/ic_call_received_black_48dp"
            app:actionLayout="@layout/widget_check" />

        <item
            android:id="@+id/nav_outgoing"
            android:title="@string/outgoing"
            android:icon="@drawable/ic_call_made_black_48dp"
            app:actionLayout="@layout/widget_check" />

        <item
            android:id="@+id/nav_missed"
            android:title="@string/missed"
            android:icon="@drawable/ic_call_missed_black_48dp"
            app:actionLayout="@layout/widget_check" />


    </group>

    <item android:title="@string/action_create">
        <menu>
            <item
                android:id="@+id/nav_note"
                android:icon="@drawable/ic_comment_black_48dp"
                android:title="@string/create_new_note" />
            <item
                android:id="@+id/nav_alarm"
                android:icon="@drawable/ic_alarm_black_48dp"
                android:title="@string/create_new_reminder" />
        </menu>
    </item>
</menu>
